--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Dynamic outside row margin</title>
 	<style>
 		:root {
-			--margin: 5;
+			--margin: 10;
 			--fr: 1;
 			--color: 255, 255, 255;
 		}
@@ -31,31 +31,54 @@
 			height: 500px;
 			width: calc((100 / var(--fr)) * 1%);
 			box-shadow: inset 0 0 0 3px black;
+			background-color: rgba(var(--color), 1);
+		}
+
+		.box:hover {
 			background-color: rgba(var(--color), 0.5);
 		}
 
 		.wide {
 			width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1%);
 		}
+
+		@media (max-width: 1024px) {
+			:root {
+				--margin: 30;
+			}
+
+			.box {
+				width: calc((100 / var(--fr)) * 1%);
+			}
+
+			.wide {
+				width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1px);
+			}
+		}
 	</style>
 </head>
 <body>
 	<div class="container">
 		<div class="box" style="--fr: 1; --color: 149, 214, 141;"></div>		
+		<div class="box" style="--fr: 1; --color: 149, 214, 141; margin: 0 10%"></div>		
 		<div class="box wide" style="--fr: 2; --color: 115, 170, 195;"></div>		
 		<div class="box wide" style="--fr: 2; --color: 115, 170, 195;"></div>
 		<div class="box" style="--fr: 2; --color: 115, 170, 195;"></div>		
 		<div class="box" style="--fr: 2; --color: 115, 170, 195;"></div>		
-		<div class="box" style="--fr: 3; --color: 236, 166, 166;"></div>		
-		<div class="box" style="--fr: 3; --color: 236, 166, 166;"></div>		
-		<div class="box" style="--fr: 3; --color: 236, 166, 166;"></div>		
 		<div class="box wide" style="--fr: 3; --color: 236, 166, 166;"></div>		
 		<div class="box wide" style="--fr: 3; --color: 236, 166, 166;"></div>		
 		<div class="box wide" style="--fr: 3; --color: 236, 166, 166;"></div>		
+		<div class="box" style="--fr: 3; --color: 236, 166, 166;"></div>		
+		<div class="box" style="--fr: 3; --color: 236, 166, 166;"></div>		
+		<div class="box" style="--fr: 3; --color: 236, 166, 166;"></div>		
 		<div class="box wide" style="--fr: 4; --color: 149, 214, 141;"></div>		
 		<div class="box wide" style="--fr: 4; --color: 149, 214, 141;"></div>		
 		<div class="box wide" style="--fr: 4; --color: 149, 214, 141;"></div>		
 		<div class="box wide" style="--fr: 4; --color: 149, 214, 141;"></div>		
+		<div class="box" style="--fr: 4; --color: 149, 214, 141;"></div>		
+		<div class="box" style="--fr: 4; --color: 149, 214, 141;"></div>		
+		<div class="box" style="--fr: 4; --color: 149, 214, 141;"></div>		
+		<div class="box" style="--fr: 4; --color: 149, 214, 141;"></div>		
 	</div>
 </body>
 </html>
