added a new pass on first row

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			background-color: rgba(var(--color), 0.5);
 		}
 
-		.wide {
+		.contained {
 			width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1%);
 		}
 
@@ -51,7 +51,7 @@
 				width: calc((100 / var(--fr)) * 1%);
 			}
 
-			.wide {
+			.contained {
 				width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1px);
 			}
 		}
@@ -60,21 +60,21 @@
 <body>
 	<div class="container">
 		<div class="box" style="--fr: 1; --color: 149, 214, 141;"></div>		
-		<div class="box" style="--fr: 1; --color: 149, 214, 141; margin: 0 10%"></div>		
-		<div class="box wide" style="--fr: 2; --color: 115, 170, 195;"></div>		
-		<div class="box wide" style="--fr: 2; --color: 115, 170, 195;"></div>
+		<div class="box contained" style="--fr: 1; --color: 149, 214, 141;"></div>		
+		<div class="box contained" style="--fr: 2; --color: 115, 170, 195;"></div>		
+		<div class="box contained" style="--fr: 2; --color: 115, 170, 195;"></div>
 		<div class="box" style="--fr: 2; --color: 115, 170, 195;"></div>		
 		<div class="box" style="--fr: 2; --color: 115, 170, 195;"></div>		
-		<div class="box wide" style="--fr: 3; --color: 236, 166, 166;"></div>		
-		<div class="box wide" style="--fr: 3; --color: 236, 166, 166;"></div>		
-		<div class="box wide" style="--fr: 3; --color: 236, 166, 166;"></div>		
+		<div class="box contained" style="--fr: 3; --color: 236, 166, 166;"></div>		
+		<div class="box contained" style="--fr: 3; --color: 236, 166, 166;"></div>		
+		<div class="box contained" style="--fr: 3; --color: 236, 166, 166;"></div>		
 		<div class="box" style="--fr: 3; --color: 236, 166, 166;"></div>		
 		<div class="box" style="--fr: 3; --color: 236, 166, 166;"></div>		
 		<div class="box" style="--fr: 3; --color: 236, 166, 166;"></div>		
-		<div class="box wide" style="--fr: 4; --color: 149, 214, 141;"></div>		
-		<div class="box wide" style="--fr: 4; --color: 149, 214, 141;"></div>		
-		<div class="box wide" style="--fr: 4; --color: 149, 214, 141;"></div>		
-		<div class="box wide" style="--fr: 4; --color: 149, 214, 141;"></div>		
+		<div class="box contained" style="--fr: 4; --color: 149, 214, 141;"></div>		
+		<div class="box contained" style="--fr: 4; --color: 149, 214, 141;"></div>		
+		<div class="box contained" style="--fr: 4; --color: 149, 214, 141;"></div>		
+		<div class="box contained" style="--fr: 4; --color: 149, 214, 141;"></div>		
 		<div class="box" style="--fr: 4; --color: 149, 214, 141;"></div>		
 		<div class="box" style="--fr: 4; --color: 149, 214, 141;"></div>		
 		<div class="box" style="--fr: 4; --color: 149, 214, 141;"></div>		
