--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 		}
 
 		body {
-			width: 100%;
+			max-width: 100vw;
 			height: 100%;
 			margin: 0;
+			/* Without site-wide padding*/
 			padding: 0;
+
+			/* With site-wide padding*/
+			/* padding: 30px; */
 			background-color: rgb(var(--color));
 		}	
 
@@ -60,7 +64,11 @@
 			}
 
 			.contained {
-				width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1px);
+				/* Without site-wide padding*/
+				/* width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1px); */
+
+				/* With site-wide padding */
+				/* width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 0px); */
 			}
 		}
 	</style>
