--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 			.contained {
 				/* Without site-wide padding*/
-				/* width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1px); */
+				width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1px);
 
 				/* With site-wide padding */
 				/* width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 0px); */
