--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 			--margin: 10;
 			--fr: 1;
 			--color: 255, 255, 255;
+			--fr1: 1;
+			--fr2: 2;
+			--fr3: 3;
+			--fr4: 4;
+			--fr5: 5;
+			--fr6: 6;
+			--fr7: 7;
+			--fr8: 8;
+			--fr9: 9;
+			--fr10: 10;
+			--fr11: 11;
+			--fr12: 12;
 		}
 
 		body {
@@ -21,7 +33,7 @@
 			padding: 0;
 
 			/* With site-wide padding*/
-			/* padding: 30px; */
+			padding: 30px;
 			background-color: rgb(var(--color));
 		}
 
@@ -53,6 +65,8 @@
 
 		.box.contains {
 			--color: 0, 0, 0;
+			display: flex;
+			flex-wrap: wrap;
 		}
 
 		.wrapped,
@@ -60,13 +74,297 @@
 			width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1%);
 		}
 
+		.fr1 {
+			--fr: 1;
+		}
+
+		@media (max-width: 1024px) {
+			.fr1 {
+				--fr: 1;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr1 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr2 {
+			--fr: 2;
+		}
+
+		@media (max-width: 1024px) {
+			.fr2 {
+				--fr: 2;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr2 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr3 {
+			--fr: 3;
+		}
+
+		@media (max-width: 1024px) {
+			.fr3 {
+				--fr: 3;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr3 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr4 {
+			--fr: 4;
+		}
+
+		@media (max-width: 1024px) {
+			.fr4 {
+				--fr: 4;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr4 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr5 {
+			--fr: 5;
+		}
+
+		@media (max-width: 1024px) {
+			.fr5 {
+				--fr: 5;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr5 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr6 {
+			--fr: 6;
+		}
+
+		@media (max-width: 1024px) {
+			.fr6 {
+				--fr: 6;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr6 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr7 {
+			--fr: 7;
+		}
+
+		@media (max-width: 1024px) {
+			.fr7 {
+				--fr: 7;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr7 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr8 {
+			--fr: 8;
+		}
+
+		@media (max-width: 1024px) {
+			.fr8 {
+				--fr: 8;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr8 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr9 {
+			--fr: 9;
+		}
+
+		@media (max-width: 1024px) {
+			.fr9 {
+				--fr: 9;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr9 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr10 {
+			--fr: 10;
+		}
+
+		@media (max-width: 1024px) {
+			.fr10 {
+				--fr: 10;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr10 {
+				--fr: 11;
+			}
+
+		}
+
+		.fr11 {
+			--fr: 11;
+		}
+
+		@media (max-width: 1024px) {
+			.fr11 {
+				--fr: 11;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr11 {
+				--fr: 11;
+			}
+
+		}
+
+		.fr12 {
+			--fr: 12;
+		}
+
+		@media (max-width: 1024px) {
+			.fr12 {
+				--fr: 12;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr12 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr13 {
+			--fr: 13;
+		}
+
+		@media (max-width: 1024px) {
+			.fr13 {
+				--fr: 13;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr13 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr14 {
+			--fr: 14;
+		}
+
+		@media (max-width: 1024px) {
+			.fr14 {
+				--fr: 14;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr14 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr15 {
+			--fr: 15;
+		}
+
+		@media (max-width: 1024px) {
+			.fr15 {
+				--fr: 15;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr15 {
+				--fr: 1;
+			}
+
+		}
+
+		.fr16 {
+			--fr: 16;
+		}
+
+		@media (max-width: 1024px) {
+			.fr16 {
+				--fr: 16;
+			}
+
+		}
+
+		@media (max-width: 768px) {
+			.fr16 {
+				--fr: 1;
+			}
+
+		}
+
 		@media (max-width: 1024px) {
 			:root {
 				--margin: 30;
-			}
-
-			.box {
-				width: calc((100 / var(--fr)) * 1%);
 			}
 
 			.wrapped,
@@ -75,7 +373,7 @@
 				width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1px);
 
 				/* With site-wide padding */
-				/* width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 0px); */
+				width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 0px);
 			}
 		}
 	</style>
@@ -83,26 +381,27 @@
 
 <body>
 	<div class="container">
-		<div class="box" style="--fr: 1; --color: 149, 214, 141;">Full</div>
-		<div class="box constrained" style="--fr: 1; --color: 149, 214, 141;">Free</div>
-		<div class="box" style="--fr: 2; --color: 115, 170, 195;">Full</div>
-		<div class="box" style="--fr: 2; --color: 115, 170, 195;">Full</div>
-		<div class="box constrained" style="--fr: 2; --color: 115, 170, 195;">Constrained</div>
-		<div class="box constrained" style="--fr: 2; --color: 115, 170, 195;">Constrained</div>
-		<div class="box" style="--fr: 3; --color: 236, 166, 166;">Full</div>
-		<div class="box" style="--fr: 3; --color: 236, 166, 166;">Full</div>
-		<div class="box" style="--fr: 3; --color: 236, 166, 166;">Full</div>
-		<div class="box constrained" style="--fr: 3; --color: 236, 166, 166;">Constrained</div>
-		<div class="box constrained" style="--fr: 3; --color: 236, 166, 166;">Constrained</div>
-		<div class="box constrained" style="--fr: 3; --color: 236, 166, 166;">Constrained</div>
-		<div class="box" style="--fr: 4; --color: 149, 214, 141;">Full</div>
-		<div class="box" style="--fr: 4; --color: 149, 214, 141;">Full</div>
-		<div class="box" style="--fr: 4; --color: 149, 214, 141;">Full</div>
-		<div class="box" style="--fr: 4; --color: 149, 214, 141;">Full</div>
-		<div class="box constrained" style="--fr: 4; --color: 149, 214, 141;">Constrained</div>
-		<div class="box constrained" style="--fr: 4; --color: 149, 214, 141;">Constrained</div>
-		<div class="box constrained" style="--fr: 4; --color: 149, 214, 141;">Constrained</div>
-		<div class="box constrained" style="--fr: 4; --color: 149, 214, 141;">Constrained</div>
+		<div class="box fr1" style="--color: 149, 214, 141;">Full</div>
+		<div class="box constrained fr1" style="--color: 115, 170, 195;">Full</div>
+		<div class="box fr2" style="--color: 115, 170, 195;">Full</div>
+		<div class="box fr2" style="--color: 115, 170, 195;">Full</div>
+		<div class="box constrained fr2" style="--color: 115, 170, 195;">Constrained</div>
+		<div class="box constrained fr4" style="--color: 115, 170, 195;">Constrained</div>
+		<div class="box constrained fr4" style="--color: 115, 170, 195;">Constrained</div>
+		<div class="box fr3" style="--color: 236, 166, 166;">Full</div>
+		<div class="box fr3" style="--color: 236, 166, 166;">Full</div>
+		<div class="box fr3" style="--color: 236, 166, 166;">Full</div>
+		<div class="box constrained fr3" style="--color: 236, 166, 166;">Constrained</div>
+		<div class="box constrained fr3" style="--color: 236, 166, 166;">Constrained</div>
+		<div class="box constrained fr3" style="--color: 236, 166, 166;">Constrained</div>
+		<div class="box fr4" style="--color: 149, 214, 141;">Full</div>
+		<div class="box fr4" style="--color: 149, 214, 141;">Full</div>
+		<div class="box fr4" style="--color: 149, 214, 141;">Full</div>
+		<div class="box fr4" style="--color: 149, 214, 141;">Full</div>
+		<div class="box constrained fr4" style="--color: 149, 214, 141;">Constrained</div>
+		<div class="box constrained fr4" style="--color: 149, 214, 141;">Constrained</div>
+		<div class="box constrained fr4" style="--color: 149, 214, 141;">Constrained</div>
+		<div class="box constrained fr4" style="--color: 149, 214, 141;">Constrained</div>
 	</div>
 </body>
 
