--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			padding: 0;
 
 			/* With site-wide padding*/
-			/* padding: 30px; */
+			padding: 30px;
 			background-color: rgb(var(--color));
 		}
 
@@ -373,7 +373,7 @@
 				width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1px);
 
 				/* With site-wide padding */
-				/* width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 0px); */
+				width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 0px);
 			}
 		}
 
@@ -388,7 +388,7 @@
 				width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 1px);
 
 				/* With site-wide padding */
-				/* width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 0px); */
+				width: calc(((100 / var(--fr)) * 1%) - ((var(--margin)) / (var(--fr) / 2)) * 0px);
 			}
 		}
 	</style>
