--- a/indexjs.html
+++ b/indexjs.html
@@ -51,8 +51,8 @@
         .box {
             height: 250px;
             width: calc((100 / var(--fr)) * 1%);
-            box-shadow: inset 0 0 0 3px black;
-            background-color: rgba(var(--color), 1);
+            box-shadow: inset 0 0 0 3px rgba(var(--color), 1);
+            background-color: rgba(var(--color), 0.6);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -63,7 +63,7 @@
         }
 
         .box:hover {
-            background-color: rgba(var(--color), 0.5);
+            background-color: rgba(var(--color), 1);
             color: black;
         }
 
